--- a/Models/TTS3_Vocoder/2019.10.08_MelGAN.md
+++ b/Models/TTS3_Vocoder/2019.10.08_MelGAN.md
@@ -1,42 +1,49 @@
-@import "../../style.less"
-
-# MelGAN: Generative Adversarial Networks for Conditional Waveform Synthesis
+# MelGAN
 
 <details>
 <summary>基本信息</summary>
 
 - 标题: MelGAN: Generative Adversarial Networks for Conditional Waveform Synthesis
 - 作者:
-  - Kundan Kumar
-  - Rithesh Kumar
-  - Thibault de Boissiere
-  - Lucas Gestin
-  - Wei Zhen Teoh
-  - Jose Sotelo
-  - Alexandre de Brebisson
-  - Yoshua Bengio
-  - Aaron Courville
+  - 01 [Kundan Kumar](../../Authors/Kundan_Kumar.md)
+  - 02 [Rithesh Kumar](../../Authors/Rithesh_Kumar.md)
+  - 03 [Thibault de Boissiere](../../Authors/Thibault_de_Boissiere.md)
+  - 04 [Lucas Gestin](../../Authors/Lucas_Gestin.md)
+  - 05 [Wei Zhen Teoh](../../Authors/Wei_Zhen_Teoh.md)
+  - 06 [Jose Sotelo](../../Authors/Jose_Sotelo.md)
+  - 07 [Alexandre de Brebisson](../../Authors/Alexandre_de_Brebisson.md)
+  - 08 [Yoshua Bengio](../../Authors/Yoshua_Bengio.md)
+  - 09 [Aaron Courville](../../Authors/Aaron_Courville.md)
 - 机构:
   - Lyrebird AI
   - University of Montreal
 - 时间:
-  - 2019.10.08 ArXiv v1
-  - 2019.10.28 ArXiv v2
-  - 2019.12.09 ArXiv v3
-  - NeurIPS2019
+  - 预印时间: 2019.10.08 ArXiv v1
+  - 预印时间: 2019.10.28 ArXiv v2
+  - 预印时间: 2019.12.09 ArXiv v3
+  - 更新笔记: 2024.06.29
+- 发表:
+  - [NeurIPS 2019](../../Publications/NeurIPS.md)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/1910.06711)
-  - [NeurIPS](https://proceedings.neurips.cc/paper/2019/hash/6804c9bca0a615bdb9374d00a9fcba59-Abstract.html)
+  - [DOI](https://proceedings.neurips.cc/paper/2019/hash/6804c9bca0a615bdb9374d00a9fcba59-Abstract.html)
   - [Github](https://github.com/descriptinc/melgan-neurips)
   - [Demo](https://melgan-neurips.github.io)
+  - [Scholar](https://scholar.google.com/scholar?cluster=)
 - 标签:
-  - Vocoder (声码器)
-  - GAN (生成对抗网络)
-  - Adversarial Learning (对抗学习)
-  - OpenSource (开源)
+  - [Vocoder](../../Tags/Vocoder.md)
+  - [模型-GAN](../../Tags/Model_GAN.md)
+  - [对抗学习](../../Tags/Learning_Adversarial.md)
+  - [开源](../../Tags/OpenSource.md)
 - 页数: 12
 - 引用: 
 - 被引: 954
+- 数据:
+  - ? 
+- 对比:
+  - ?
+- 复现:
+  - ?
 
 </details>
 
@@ -55,7 +62,7 @@
 > Modelling raw audio is a particularly challenging problem because of the high temporal resolution of the data (usually at least 16,000 samples per second) and the presence of structure at different timescales with short and long-term dependencies.
 > Thus, instead of modelling the raw temporal audio directly, most approaches simplify the problem by modelling a lower-resolution representation that can be efficiently computed from the raw temporal signal.
 > Such a representation is typically chosen to be easier to model than raw audio while preserving enough information to allow faithful inversion back to audio.
-> In the case of speech, aligned linguistic features ([WaveNet (2016)](../TTS3_Vocoder/2016.09.12_WaveNet.md)) and mel-spectrograms ([Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [DeepVoice2 (2017)]()) are two commonly used intermediate representations.
+> In the case of speech, aligned linguistic features ([WaveNet (2016)](../TTS3_Vocoder/2016.09.12_WaveNet.md)) and mel-spectrograms ([Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [DeepVoice2 (2017)](../../Models/TTS0_System/2017.05.24_DeepVoice2.md)) are two commonly used intermediate representations.
 > Audio modelling is thus typically decomposed into two stages.
 > The first models the intermediate representation given text as input.
 > The second transforms the intermediate representation back to audio.
@@ -69,7 +76,7 @@
 > More sophisticated representations and signal processing techniques have been investigated.
 > For instance, the [WORLD vocoder (2016)](../TTS3_Vocoder/2016.07.01_WORLD.md) introduces an intermediate representation tailored to speech modelling based on mel-spectrogram-like features.
 > The WORLD vocoder is paired with a dedicated signal processing algorithm to map the intermediate representation back to the original audio.
-> It has been successfully used to carry out text-to-speech synthesis, for example in Char2Wav, where WORLD vocoder features are modelled with an attention-based recurrent neural network (Sotelo et al., 2017; [Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [DeepVoice3 (2017)]()).
+> It has been successfully used to carry out text-to-speech synthesis, for example in Char2Wav, where WORLD vocoder features are modelled with an attention-based recurrent neural network (Sotelo et al., 2017; [Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [DeepVoice3 (2017)](../../Models/TTS2_Acoustic/2017.10.20_DeepVoice3.md)).
 > The main issue with these pure signal processing methods is that the mapping from intermediate features to audio usually introduces noticeable artifacts.
 
 > ### Autoregressive neural-networks-based models 
@@ -78,7 +85,7 @@
 > SampleRNN (Mehri et al., 2016) is an alternative architecture to perform unconditional waveform generation which explicitly models raw audio at different temporal resolutions using multi-scale recurrent neural networks.
 > WaveRNN (Kalchbrenner et al., 2018) is a faster auto-regressive model based on a simple, single-layer recurrent neural network.
 > WaveRNN introduces various techniques, such as sparsification and subscale generations to further increase synthesis speed.
-> These methods have produced state-of-the-art results in text-to-speech synthesis (Sotelo et al., 2017; [Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [DeepVoice3 (2017)]()) and other audio generation tasks (Engel et al., 2017).
+> These methods have produced state-of-the-art results in text-to-speech synthesis (Sotelo et al., 2017; [Tacotron2 (2017)](../TTS2_Acoustic/2017.12.16_Tacotron2.md); [DeepVoice3 (2017)](../../Models/TTS2_Acoustic/2017.10.20_DeepVoice3.md)) and other audio generation tasks (Engel et al., 2017).
 > Unfortunately, inference with these models is inherently slow and inefficient because audio samples must be generated sequentially.
 > Thus auto-regressive models are usually not suited for real-time applications.
 
@@ -293,7 +300,7 @@
 > We use latent vector of size 256 and use the same hyper-parameters for training as mel-spectrogram inversion experiment.
 > We used upsampling layers with 4x, 4x, 2x and 2x ratios to achieve 64x upsampling.
 
-## 4·Conclusion and future work
+## 4·Conclusion & Future Work
 
 > We have introduced a GAN architecture tailored for conditional audio synthesis and we demonstrated qualitative and quantitative results establishing the effectiveness and generality of the proposed methods.
 > Our model has the following assets: it is very lightweight, can be trained quickly on a single desktop GPU, and it is very fast at inference time.
