--- a/Models/Speech_LLM/2023.05.16_SoundStorm.md
+++ b/Models/Speech_LLM/2023.05.16_SoundStorm.md
@@ -15,19 +15,26 @@
   - [Google Research](../../Institutions/Google.md)
 - 时间:
   - 预印时间: 2023.05.16 ArXiv v1
-  - 更新笔记: 2024.06.13
+  - 更新笔记: 2024.07.04
 - 发表:
   - ~~ICLR 2024 Reject~~
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2305.09636)
-  - [DOI]()
-  - [Github]()
+  <!-- - [DOI]() -->
+  <!-- - [Github]() -->
   - [Demo](https://google-research.github.io/seanet/soundstorm/examples/)
+  - [Scholar](https://scholar.google.com/scholar?cluster=12476111044975033127)
 - 标签:
   - [语音合成](../../Tags/SpeechSynthesis.md)
 - 页数: 9
 - 引用: ?
-- 被引: 36
+- 被引: 55
+- 数据:
+  - ? 
+- 对比:
+  - ?
+- 复现:
+  - ?
 
 </details>
 
@@ -47,8 +54,8 @@
 
 ## 1.Introduction·引言
 
-> Modeling discrete representations of audio produced by neural codecs ([SoundStream (2021)](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)) makes the task of audio generation amenable to the powerful Transformer-based sequence-to-sequence modeling approaches ([Transformer (2017)](../../Models/_Basis/2017.06.12_Transformer.md)).
-> Casting unconditional and conditional audio generation as sequence-to-sequence modeling has unlocked rapid progress in speech continuation ([AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)), text-to-speech ([VALL-E (2023)](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)), and general audio and music generation ([AudioGen (2022)](); [MusicLM (2023)]()).
+> Modeling discrete representations of audio produced by neural codecs ([SoundStream (2021)](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)) makes the task of audio generation amenable to the powerful Transformer-based sequence-to-sequence modeling approaches ([Transformer (2017)](../_Transformer/2017.06.12_Transformer.md)).
+> Casting unconditional and conditional audio generation as sequence-to-sequence modeling has unlocked rapid progress in speech continuation ([AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)), text-to-speech ([VALL-E (2023)](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)), and general audio and music generation ([AudioGen (2022)](../../Models/Speech_LLM/2022.09.30_AudioGen.md); [MusicLM (2023)](../../Models/Speech_LLM/2023.01.26_MusicLM.md)).
 
 建模由神经编解码器生成的音频离散表示使得音频生成任务可以采用强大的基于 Transformer 序列到序列建模方法.
 将无条件和有条件音频生成视为序列到序列建模已经解锁了在语音延续, 文本转语音, 一般音频和音乐生成方面的快速发展.
@@ -65,8 +72,8 @@
 
 > The problem of generating long audio token sequences can be addressed by at least three orthogonal approaches or a combination thereof:
 > 1. Efficient attention mechanisms ([Reformer (2020)](); [Performers (2021)](); [Nyströmformer (2021)](); [Perceiver AR (2022)]()),
-> 2. Non-autoregressive, parallel decoding schemes ([NAT (2017)](); [Mask-Predict (2019)](); [MaskGIT (2022)]()),
-> 3. Custom architectures adapted to the special structure of the tokens produced by neural audio codecs ([AudioGen (2022)](); [VALL-E (2023)](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [RQ-Transformer (2022)]()).
+> 2. Non-autoregressive, parallel decoding schemes ([NAT (2017)](); [Mask-Predict (2019)](); [MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md)),
+> 3. Custom architectures adapted to the special structure of the tokens produced by neural audio codecs ([AudioGen (2022)](../../Models/Speech_LLM/2022.09.30_AudioGen.md); [VALL-E (2023)](../../Models/Speech_LLM/2023.01.05_VALL-E.md); [RQ-Transformer (2022)]()).
 >
 > However, in the context of modeling the token sequence of neural audio codecs, either unconditionally or based on weak conditioning such as text, the efficient generation of long, high-quality audio segments remains an open problem.
 
@@ -90,7 +97,7 @@
 > In this work, we present ***SoundStorm***, a method for efficient and high-quality audio generation.
 > ***SoundStorm*** addresses the problem of generating long audio token sequences by relying on:
 > 1. an architecture adapted to the hierarchical structure of the audio tokens,
-> 2. a parallel, non-autoregressive, confidence-based decoding scheme inspired by [MaskGIT (2022)]() for residual vector-quantized token sequences.
+> 2. a parallel, non-autoregressive, confidence-based decoding scheme inspired by [MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md) for residual vector-quantized token sequences.
 
 我们提出了 ***SoundStorm***, 一种用于高效高质量音频生成的方法.
 ***SoundStorm*** 通过以下方式解决生成长音频 token 序列问题:
@@ -124,9 +131,9 @@
 ### Modeling the Tokens of Neural Audio Codecs
 
 > Unsupervised speech embeddings ([Wav2Vec2.0](../../Models/Speech_Representaion/2020.06.20_Wav2Vec2.0.md); [HuBERT](../../Models/Speech_Representaion/2021.06.14_HuBERT.md); [W2V-BERT](../../Models/Speech_Representaion/2021.08.07_W2V-BERT.md)) have provided a low-framerate representation of the underlying signal which remains rich enough after discretization for language models to generate intelligible speech from a specific speaker as a sequence of tokens ([Generative Spoken Language Modeling (2021)]()).
-> Neural audio codecs ([SoundStream (2021)](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)]()), with their ability of reconstructing high-quality audio at very low bitrates, subsequently allowed for extending discrete modeling to audio signals as diverse as multi-speaker speech and piano ([AutoLM (2022)](); [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)), music ([MusicLM (2023)]()) or sound effects ([AudioGen (2022)]()).
+> Neural audio codecs ([SoundStream (2021)](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md); [EnCodec (2022)](../../Models/Speech_Neural_Codec/2022.10.24_EnCodec.md)), with their ability of reconstructing high-quality audio at very low bitrates, subsequently allowed for extending discrete modeling to audio signals as diverse as multi-speaker speech and piano ([AutoLM (2022)](); [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)), music ([MusicLM (2023)](../../Models/Speech_LLM/2023.01.26_MusicLM.md)) or sound effects ([AudioGen (2022)](../../Models/Speech_LLM/2022.09.30_AudioGen.md)).
 > In particular, [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md) introduces a hierarchical sequence-to-sequence approach where high-level semantic tokens are generated as an intermediate representation, which is then used as a conditioning signal for predicting tokens of a [SoundStream (2021)](../../Models/Speech_Neural_Codec/2021.07.07_SoundStream.md) codec.
-> While this hierarchical approach has demonstrated remarkable results for speech ([SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)) and music modeling ([MusicLM (2023)](); [SingSong (2023)]()), the computational cost of modeling flattened SoundStream tokens with self-attention scales quadratically with the sequence length and thus the bitrate of the neural codec, preventing these models from generating long-form audio with high quality.
+> While this hierarchical approach has demonstrated remarkable results for speech ([SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md)) and music modeling ([MusicLM (2023)](../../Models/Speech_LLM/2023.01.26_MusicLM.md); [SingSong (2023)]()), the computational cost of modeling flattened SoundStream tokens with self-attention scales quadratically with the sequence length and thus the bitrate of the neural codec, preventing these models from generating long-form audio with high quality.
 > ***SoundStorm*** alleviates this issue by modeling the multi-level tokens of the neural codec in parallel, inducing a two-order of magnitude speed-up over autoregressive modeling and unlocking the ability to scale audio generation abilities both in quality and in sequence length.
 
 无监督语音嵌入提供了基础信号的低帧率表示, 在离散化后仍然保留足够丰富的信息, 使得语言模型从特定说话人处以一系列 token 的形式生成可理解的语音.
@@ -164,8 +171,8 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 
 ### Parallel Decoding
 
-> In order to improve the inference time and to allow bidirectional non-causal attention on the input sequence, parallel decoding schemes have been proposed for text ([NAT (2017)](); [Mask-Predict (2019)]()), image ([MaskGIT (2022)]()) and video generation ([Phenaki (2022)]()).
-> Of particular relevance to our work is the parallel, iterative sampling scheme of [MaskGIT (2022)]().
+> In order to improve the inference time and to allow bidirectional non-causal attention on the input sequence, parallel decoding schemes have been proposed for text ([NAT (2017)](); [Mask-Predict (2019)]()), image ([MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md)) and video generation ([Phenaki (2022)]()).
+> Of particular relevance to our work is the parallel, iterative sampling scheme of [MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md).
 > During inference time, MaskGIT starts from masked tokens, and in each round, predicts a portion of the tokens based on confidence scores.
 > The portion of the predicted tokens in each round is controlled by a schedule, and usually progressively increases over the iterations - once predicted, the tokens are treated as fixed.
 > Our proposed decoding scheme can be seen as the extension of MaskGIT’s decoding to token sequences produced by residual quantization.
@@ -178,7 +185,7 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 
 ## 3.Methodology·方法
 
-> ***SoundStorm*** receives as input a sequence of discrete tokens representing the conditioning signal and produces as output a sequence of SoundStream tokens, which can be decoded back to audio waveforms. We assume that the conditioning signal is time-aligned with the SoundStream frames or can be upsampled to the same rate. Such a conditioning signal is, for example, the semantic token sequence used in [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), or MusicLM, which makes our method a drop-in replacement for the acoustic generators of these models.
+> ***SoundStorm*** receives as input a sequence of discrete tokens representing the conditioning signal and produces as output a sequence of SoundStream tokens, which can be decoded back to audio waveforms. We assume that the conditioning signal is time-aligned with the SoundStream frames or can be upsampled to the same rate. Such a conditioning signal is, for example, the semantic token sequence used in [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), [SPEAR-TTS (2023)](../../Models/Speech_LLM/2023.02.07_SPEAR-TTS.md), or [MusicLM](../../Models/Speech_LLM/2023.01.26_MusicLM.md), which makes our method a drop-in replacement for the acoustic generators of these models.
 
 > We leave the extension to other types of conditioning signals via cross-attention or to unconditional sampling for future work, and focus our presentation of ***SoundStorm*** as the acoustic generator within [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md), replacing both [AudioLM (2022)](../../Models/Speech_LLM/2022.09.07_AudioLM.md)’s coarse and fine acoustic modeling stages.
 
@@ -198,7 +205,7 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 
 ### 3.2.Masking
 
-> For designing our masking and decoding, we extend the masking and confidence-based parallel decoding scheme of [MaskGIT (2022)]() to token sequences produced by RVQ. At a high level, our approach can be seen as following the strategy of [MaskGIT (2022)]() per RVQ level in a coarse-to-fine order.
+> For designing our masking and decoding, we extend the masking and confidence-based parallel decoding scheme of [MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md) to token sequences produced by RVQ. At a high level, our approach can be seen as following the strategy of [MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md) per RVQ level in a coarse-to-fine order.
 > The coarse-to-fine ordering is of particular importance, since it not only respects the conditional dependencies between levels of the RVQ hierarchy, but also exploits the conditional independence of tokens from finer levels given all tokens from coarser levels.
 > The tokens of finer levels are responsible for local, fine acoustic details and can thus be sampled in parallel without a loss of audio quality.
 
@@ -212,7 +219,7 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 > Our masking scheme proceeds as follows:
 > - Sample the prompt delimiter timestep $t\sim\mathcal{U}\{0,T-1\}$;
 > - Sample the current RVQ level $q\sim\mathcal{U}\{1,Q\}$;
-> - Sample the mask $M \in \{0, 1\}^T$ according to a cosine schedule ([MaskGIT (2022)]()) for level $q$, i.e., sample the masking ratio $p = \cos(u)$ where $u \sim \mathcal{U}[0, \pi/2]$, and sample iid $M_i\sim \text{Bernoulli}(p)$.
+> - Sample the mask $M \in \{0, 1\}^T$ according to a cosine schedule ([MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md)) for level $q$, i.e., sample the masking ratio $p = \cos(u)$ where $u \sim \mathcal{U}[0, \pi/2]$, and sample iid $M_i\sim \text{Bernoulli}(p)$.
 > - Mask the selected non-prompt tokens at the current RVQ level $q$ (mask $Y_{t',q}$ if $M_{t'}= 1$ and $t'>t$) and all non-prompt tokens at finer RVQ levels ($Y_{>t,>q}$).
 
 我们对应地设计了我们的掩码方案. 为了能够语音提示, 我们随机采样一个时间步并不对该时间步之前的 token 进行掩盖.
@@ -230,8 +237,8 @@ VALL-E (2023) 则依赖于混合方法, 其中对应第一个 RVQ 级别的 toke
 
 ### 3.3.Iterative Parallel Decoding
 
-> Given a conditioning signal, our decoding scheme starts with all SoundStream tokens masked out except for the ones of the prompt (if provided). Then, it proceeds to sampling the tokens RVQ level-wise in a coarse-to-fine order, only proceeding to level $q + 1$ when all tokens for levels $1,\cdots, q$ have been sampled. Within an RVQ level, we use the confidence-based sampling scheme of [MaskGIT (2022)]().
-> Namely, we perform multiple forward passes, and at each iteration $i$, we sample candidates for the masked positions, retaining $p_i$ of them based on confidence scores, where $p_i$ follows a cosine schedule. Compared to [MaskGIT (2022)](), we use greedy decoding instead of confidence-based sampling for the last iteration within each RVQ level, which we found to improve the perceived audio quality.
+> Given a conditioning signal, our decoding scheme starts with all SoundStream tokens masked out except for the ones of the prompt (if provided). Then, it proceeds to sampling the tokens RVQ level-wise in a coarse-to-fine order, only proceeding to level $q + 1$ when all tokens for levels $1,\cdots, q$ have been sampled. Within an RVQ level, we use the confidence-based sampling scheme of [MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md).
+> Namely, we perform multiple forward passes, and at each iteration $i$, we sample candidates for the masked positions, retaining $p_i$ of them based on confidence scores, where $p_i$ follows a cosine schedule. Compared to [MaskGIT (2022)](../../Models/_Transformer/2022.02.08_MaskGIT.md), we use greedy decoding instead of confidence-based sampling for the last iteration within each RVQ level, which we found to improve the perceived audio quality.
 
 给定一个条件信号, 我们的解码方案从除了提示之外的所有 SoundStream token 开始.
 然后, 它逐级在粗到细顺序中采样 tokens. 在一个级别内, 我们使用基于置信度的采样方案.
