--- a/Models/Speech_LLM/2024.06.03_ControlSpeech.md
+++ b/Models/Speech_LLM/2024.06.03_ControlSpeech.md
@@ -670,7 +670,7 @@ $$
 > For the comparison of voice cloning effectiveness, we have reproduced the [VALL-E](2023.01.05_VALL-E.md) model and the [MobileSpeech](../../Models/_../_tmp/2024.02.14_MobileSpeech.mdsenting the autoregressive paradigm and the parallel generation paradigm.
 > The relevant baseline reproduction code has been integrated into the ***ControlToolkit***.
 
-> Evaluation metrics We have aligned our objective experiments with [[PromptTTS](../_tmp/2022.11.22_PromptTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS 2](../Prompt/2023.09.05_PromptTTS2.md)].
+> Evaluation metrics We have aligned our objective experiments with [[PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS 2](../Prompt/2023.09.05_PromptTTS2.md)].
 > To evaluate the model’s style controllability, we use accuracy to represent the evaluation metric, which measures the correspondence between the style factors in the output speech and those in the prompts.
 > The accuracy of pitch, speaking speed, and volume is calculated using signal processing tools, while emotion classification accuracy is computed using a fine-tuned emotion classification model.
 > We employ the official version of the [Emotion2Vec](../Speech_Representaion/2023.12.23_Emotion2Vec.md) model for the speech emotion recognition task, which is fine-tuned on the emotional dataset of ***VccmDataset***.
@@ -706,7 +706,7 @@ $$
 相关的基线重现代码已集成到***ControlToolkit***中. 
 
 
-评估指标 我们的客观实验与 ([PromptTTS](../_tmp/2022.11.22_PromptTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS 2](../Prompt/2023.09.05_PromptTTS2.md)) 保持一致. 
+评估指标 我们的客观实验与 ([PromptTTS](../Prompt/2022.11.22_PromptTTS.md), [SALL-E](../../Datasets/2023.08.28_TextrolSpeech.md), [PromptTTS 2](../Prompt/2023.09.05_PromptTTS2.md)) 保持一致. 
 为了评估模型的风格可控性, 我们使用准确度作为评估指标, 该指标衡量输出语音中的风格因素与提示中的风格因素之间的对应关系. 
 音高, 说话速度和音量的准确度使用信号处理工具计算, 而情感分类准确度则使用在***VccmDataset***情感数据上微调的情感分类模型计算. 
 我们使用[Emotion2Vec](../Speech_Representaion/2023.12.23_Emotion2Vec.md)模型的官方版本来进行语音情感识别任务, 该模型在***VccmDataset***的情感数据集上进行了微调. 
