--- a/Models/E2E/2021.06.11_VITS.md
+++ b/Models/E2E/2021.06.11_VITS.md
@@ -5,9 +5,9 @@
 
 - 标题: Conditional Variational Autoencoder with Adversarial Learning for End-to-End Text-to-Speech
 - 作者:
-  - [Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md)
-  - [Jungil Kong](../../Authors/Jungil_Kong.md)
-  - [Juhee Son](../../Authors/Juhee_Son.md)
+  - 01 [Jaehyeon Kim](../../Authors/Jaehyeon_Kim.md)
+  - 02 [Jungil Kong](../../Authors/Jungil_Kong.md)
+  - 03 [Juhee Son](../../Authors/Juhee_Son.md)
 - 机构:
   - [Kakao Enterprise](../../Institutions/Kakao_Enterprise.md)
   - [KAIST](../../Institutions/KAIST_韩国科学技术研究所.md)
@@ -15,7 +15,7 @@
   - 预印时间: 2021.06.11 ArXiv v1
   - 更新笔记: 2024.06.06
 - 发表:
-  - [ICML](../../Publications/ICML.md)
+  - [ICML 2021](../../Publications/ICML.md)
 - 链接:
   - [ArXiv](https://arxiv.org/abs/2106.06103)
   - [DOI](https://proceedings.mlr.press/v139/kim21f)
