--- a/Models/Speech_LLM/2024.04.03_CLaM-TTS.md
+++ b/Models/Speech_LLM/2024.04.03_CLaM-TTS.md
@@ -21,6 +21,7 @@
   - [DOI]()
   - [Github]()
   - [Demo](https://clam-tts.github.io)
+  - [Scholar](https://scholar.google.com/scholar?cluster=)
 - 标签:
   - [语音合成](../../Tags/SpeechSynthesis.md)
   - [语言模型](../../Tags/LanguageModel.md)
@@ -28,6 +29,12 @@
 - 页数: 24
 - 引用: ?
 - 被引: ?
+- 数据:
+  - ? 
+- 对比:
+  - ?
+- 复现:
+  - ?
 
 </details>
 
